# canister-sdk

./: .gitignore  AUDIT_IGNORE  Cargo.toml  Justfile  LICENSE  README.md  build.sh  canbench.yml  cmc.wasm  cobertura.xml  dfx.json
canbenches/: Cargo.toml
canbenches/src/: lib.rs
cmc-mock/: Cargo.toml
cmc-mock/src/: lib.rs
ic-auction/: Cargo.toml  README.md
ic-auction/src/: api.rs  error.rs  inspect.rs  lib.rs  state.rs  types.rs
ic-canister-client/: Cargo.toml
ic-canister-client/src/: client.rs  error.rs  ic_client.rs  lib.rs  pocket_ic.rs  state_machine_tests.rs
ic-canister-client/src/agent/: identity.rs  mod.rs
ic-canister-client/tests/identity/: identity.pem
ic-canister/ic-canister/: Cargo.toml
ic-canister/ic-canister-macros/: Cargo.toml
ic-canister/ic-canister-macros/src/: api.rs  canister_call.rs  derive.rs  export_candid.rs  lib.rs
ic-canister/ic-canister-macros/tests/: export_candid.rs
ic-canister/ic-canister/src/: idl.rs  lib.rs  storage.rs
ic-canister/tests/canister-a/: Cargo.toml
ic-canister/tests/canister-a/src/: lib.rs  (+1 more)
ic-canister/tests/canister-b/: Cargo.toml
ic-canister/tests/canister-c/: Cargo.toml
ic-canister/tests/canister-d/: Cargo.toml
ic-canister/tests/canister-e/: Cargo.toml
ic-crypto-getrandom-for-wasm/: Cargo.toml
ic-crypto-getrandom-for-wasm/src/: lib.rs
ic-exports/: Cargo.toml
ic-exports/src/: ic_test_state_machine.rs  icrc1_ledger.rs  lib.rs  pocket_ic.rs  state_machine_test.rs
ic-exports/src/pocket_ic/: nio.rs
ic-factory/: Cargo.toml
ic-factory/src/: api.rs  core.rs  error.rs  lib.rs  state.rs  top_up.rs  update_lock.rs
ic-factory/src/state/: v1.rs
ic-factory/src/types/: canister.rs  checksum.rs  mod.rs
ic-helpers/: Cargo.toml
ic-helpers/src/: candid_header.rs  lib.rs  tokens.rs  types.rs  utils.rs
ic-helpers/src/agent/: agent.rs  error.rs  mod.rs  request_id.rs
ic-helpers/src/factory/: api.rs  core.rs  error.rs  mod.rs  state.rs
ic-helpers/src/is20/: principal_ext.rs  types.rs
ic-helpers/src/ledger/: account_id.rs  mod.rs  principal_ext.rs
ic-helpers/src/management/: canister.rs  types.rs
ic-helpers/src/metrics/: map.rs  mod.rs
ic-helpers/src/pair/: mod.rs  principal_ext.rs  types.rs
ic-helpers/src/principal/: ledger.rs  management.rs  mod.rs
ic-helpers/src/stable/: README.md  chunk_manager.rs  mod.rs
ic-http-outcall/api/: Cargo.toml
ic-http-outcall/api/src/: lib.rs  non_replicated.rs  outcall.rs  proxy_types.rs  replicated.rs
ic-http-outcall/proxy-canister/: Cargo.toml
ic-http-outcall/proxy-canister/src/: lib.rs  main.rs
ic-http-outcall/proxy-client/: Cargo.toml
ic-http-outcall/proxy-client/src/: main.rs
ic-kit/: Cargo.toml  README.md
ic-kit/examples/: canister.rs
ic-kit/src/: handler.rs  ic.rs  inject.rs  interface.rs  lib.rs  mock.rs  wasm.rs
ic-kit/src/interfaces/: management.rs  mod.rs
ic-log/: Cargo.toml
ic-log/examples/: log_canister.rs
ic-log/src/: canister.rs  did.rs  lib.rs  platform.rs  settings.rs  writer.rs
ic-log/src/canister/: inspect.rs  state.rs
ic-log/src/formatter/: buffer.rs  humantime.rs  mod.rs
ic-log/tests/: in_memory_logger.rs
ic-metrics/: Cargo.toml
ic-metrics/src/: lib.rs  map.rs
ic-payments/: Cargo.toml  build_payments_canister.sh  state_machine_test.sh
ic-payments/payment-canister/: Cargo.toml
ic-payments/src/: balances.rs  error.rs  icrc1.rs  lib.rs  recovery_list.rs  state.rs  token_terminal.rs  transfer.rs
ic-payments/test-payment-canister/: Cargo.toml
ic-payments/test-payment-canister/src/: canister.rs  lib.rs  main.rs
ic-payments/tests/: double_step.rs  handle_responses.rs  pocket_ic_tests.rs  single_step.rs  state_machine.rs  terminal.rs
ic-payments/tests/common/: mod.rs
ic-stable-storage/: Cargo.toml  README.md
ic-stable-storage/src/: error.rs  lib.rs  log.rs  map.rs  multimap.rs  pages.rs  vec.rs  virtual_memory.rs
ic-stable-structures/: Cargo.toml
ic-stable-structures/benches/: stable_storage_benchmark.rs
ic-stable-structures/src/: error.rs  lib.rs  manager.rs  memory.rs  memory_utils.rs  multimap.rs  profiling.rs  ring_buffer.rs  storage.rs  storage_heap.rs  storage_wasm.rs  test_utils.rs  unbounded.rs
ic-stable-structures/src/memory_mapped_files/: constant.rs  error.rs  file_memory.rs  memory.rs  memory_mapped_file.rs  mod.rs
ic-stable-structures/src/storage/: error.rs  structures.rs
ic-stable-structures/src/storage_wasm/: structures_wasm.rs
ic-stable-structures/src/structure/: mod.rs
ic-stable-structures/src/task/: mod.rs
ic-stable-structures/tests/: integration_test.rs
ic-stable-structures/tests/did/: Cargo.toml
ic-stable-structures/tests/dummy_canister/: .gitignore  Cargo.toml  dummy_canister.did
ic-stable-structures/tests/memory_mapped_files/: mod.rs
ic-stable-structures/tests/pocket_ic_tests/: btreemap.rs  cached_btreemap.rs  cell.rs  log.rs  map.rs  mod.rs  multimap.rs  ring_buffer.rs  vec.rs  wasm_utils.rs
ic-stable-structures/tests/state_machine/: btreemap.rs  cached_btreemap.rs  cell.rs  log.rs  map.rs  mod.rs  multimap.rs  ring_buffer.rs  wasm_utils.rs
ic-stable-structures/tests/utils/: mod.rs  wasm.rs
ic-stable-structures/tests_CURRENTLY_DISABLED/: integration_test.rs
ic-stable-structures/tests_CURRENTLY_DISABLED/dummy_canister/: Cargo.toml
ic-stable-structures/tests_CURRENTLY_DISABLED/state_machine/: map.rs  vec.rs
ic-storage/: Cargo.toml
ic-storage/ic-storage-derive/: Cargo.toml
ic-storage/ic-storage-derive/src/: lib.rs
ic-storage/src/: error.rs  errors.rs  lib.rs  stable.rs  testing.rs
ic-storage/tests/: derive.rs
ic-task-scheduler/: Cargo.toml
ic-task-scheduler/src/: error.rs  lib.rs  retry.rs  scheduler.rs  task.rs  time.rs
ic-task-scheduler/src/task/: mod.rs
ic-task-scheduler/tests/: integration_test.rs
ic-task-scheduler/tests/dummy_scheduler_canister/: .gitignore  Cargo.toml
ic-task-scheduler/tests/pocket_ic_tests/: mod.rs  scheduler.rs  wasm_utils.rs
ic-test-utils/: .gitignore  Cargo.toml  README.md
ic-test-utils/src/: errors.rs  lib.rs
ic-test-utils/src/canister/: management.rs  mod.rs  wallet.rs
(+109 files in other folders)
