[workspace]
resolver = "2"
members = [
    "ic-auction",
    "ic-canister/ic-canister-macros",
    "ic-canister/ic-canister",
    "ic-canister/tests/canister-a",
    "ic-canister/tests/canister-b",
    "ic-canister/tests/canister-c",
    "ic-canister/tests/canister-d",
    "ic-canister/tests/canister-e",
    "ic-canister-client",
    "icrc-ledger-types",
    "ic-exports",
    "ic-crypto-getrandom-for-wasm",
    "ic-helpers",
    "ic-kit",
    "ic-log",
    "ic-metrics",
    "ic-payments",
    "ic-payments/test-payment-canister",
    "ic-stable-structures",
    "ic-stable-structures/tests/did",
    "ic-stable-structures/tests/dummy_canister",
    "ic-storage",
    "ic-storage/ic-storage-derive",
    "ic-test-utils",
]

[workspace.package]
version = "0.9.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
arc-swap = "1.6"
async-recursion = "1.0.2"
async-trait = "0.1"
auto_ops = "0.3"
criterion = "0.5.1"
crypto-bigint = { version = "0.5", features = ["serde"] }
dirs = "5.0"
env_logger = "0.10"
flate2 = "1"
futures = { version = "0.3", default-features = false }
garcon = "0.2"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
humantime = "2.1"
k256 = "0.13"
lazy_static = "1"
log = "0.4"
memmap2 = { version = "0.9" }
num-bigint = "0.4"
num-traits = "0.2"
once_cell = "1.18"
parking_lot = "0.12"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
reqwest = { version = "0.11", default-features = false }
ringbuffer = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.2"
serde_json = "1.0"
serde_tokenstream = "0.2"
sha2 = "0.10"
schnellru = "0.2"
syn = "1.0"
tempfile = "3.6"
thiserror = "1.0"
tokio = "1.0"
tokio-test = "0.4"

# IC dependencies
candid = "0.9"
ic-agent = { version = "0.29" }
ic-cdk = "0.11"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.5.1"
icrc-ledger-types = "0.1.0"
ic-ledger-types = "0.8"
dfinity-stable-structures = { package = "ic-stable-structures", version = "0.6" }
ic-test-state-machine-client = "3"
