[package]
name = "canbenches"
version.workspace = true
edition.workspace = true

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
canbench-rs = { git = "https://github.com/F3kilo/canbench.git", optional = true }
ic-stable-structures = { path = "../ic-stable-structures", features = ["profiling"] }

[lib]
crate-type = ["cdylib"]
