[package]
name = "cmc-mock"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
default = []
export-api = []

[dependencies]
serde = { workspace = true }
candid = { workspace = true }

ic-exports = { path = "../ic-exports" }
ic-canister = { path = "../ic-canister/ic-canister" }
ic-canister-macros = { path = "../ic-canister/ic-canister-macros" }
ic-storage = { path = "../ic-storage" }

ic-types = { workspace = true }
ic-nns-common = { workspace = true }
