[package]
name = "ic-auction"
version = "0.1.0"
edition = "2021"

[features]
default = []
export-api = []

# Add debug outputs for the canister
debug = []

[dependencies]
candid = "0.8"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

ic-exports = { path = "../ic-exports" }
ic-canister = { path = "../ic-canister/ic-canister" }
ic-canister-macros = { path = "../ic-canister/ic-canister-macros" }
ic-storage = { path = "../ic-storage" }
ic-helpers = { path = "../ic-helpers" }
ic-metrics = { path = "../ic-metrics" }
