[package]
name = "ic-auction"
version.workspace = true
edition.workspace = true

[features]
default = []
export-api = []

# Add debug outputs for the canister
debug-logs = []

[dependencies]
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

ic-exports = { path = "../ic-exports" }
ic-canister = { path = "../ic-canister/ic-canister" }
ic-canister-macros = { path = "../ic-canister/ic-canister-macros" }
ic-storage = { path = "../ic-storage" }
ic-helpers = { path = "../ic-helpers" }
ic-metrics = { path = "../ic-metrics" }
