[package]
name = "ic-auction"
version.workspace = true
edition.workspace = true

[features]
default = []
export-api = []

# Add debug outputs for the canister
debug-logs = []

[dependencies]
candid = { workspace = true }
ic-canister = { path = "../ic-canister/ic-canister" }
ic-canister-macros = { path = "../ic-canister/ic-canister-macros" }
ic-exports = { path = "../ic-exports" }
ic-helpers = { path = "../ic-helpers" }
ic-metrics = { path = "../ic-metrics" }
ic-storage = { path = "../ic-storage" }
serde = { workspace = true }
thiserror = { workspace = true }
