[package]
name = "ic-canister-client"
version.workspace = true
edition.workspace = true
description = "Client for interacting with an IC Canister"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ic-agent-client = ["dep:ic-agent", "reqwest"]
state-machine-tests-client = ["dep:tokio", "ic-exports/ic-test-state-machine"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ic-agent = { workspace = true, optional = true }
ic-canister = { path = "../ic-canister/ic-canister" }
ic-exports = { path = "../ic-exports" }
reqwest = { workspace = true, optional = true, features = [
  "blocking",
  "gzip",
  "json",
  "rustls-tls",
  "trust-dns",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["sync"] }
