[package]
name = "ic-canister-client"
version.workspace = true
edition.workspace = true
description = "Client for interacting with an IC Canister"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ic-agent-client = ["dep:ic-agent"]
pocket-ic-client = ["dep:tokio", "ic-exports/pocket-ic-tests"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ic-agent = { workspace = true, optional = true }
ic-canister = { path = "../ic-canister/ic-canister" }
ic-exports = { path = "../ic-exports" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["sync"] }
