[package]
name = "ic-crypto-getrandom-for-wasm"
version.workspace = true
edition.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
candid = { workspace = true }
getrandom = { version = "0.2", features = ["custom"] }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
rand_chacha = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
getrandom = { version = "0.2" }
