# A crate with all of the ic exports that is used in other dependencies 
# needed to simplify the process of upgrading ic deps in other projects

[package]
name = "ic-exports"
version.workspace = true
edition.workspace = true

[features]
default = []
ledger = ["ic-ledger-types"]
icrc = ["icrc-ledger-types"]
ic-test-state-machine = ["flate2", "ic-test-state-machine-client", "log", "once_cell", "reqwest"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
serde = { workspace = true }

ic-ledger-types = { workspace = true, optional = true }

# Using our icrc-ledger-types fork until the one published on crates.io is updated
# with the latest version of candid
icrc-ledger-types = { path = "../icrc-ledger-types", optional = true }
# icrc-ledger-types = { workspace = true, optional = true }

ic-kit = { path = "../ic-kit" }

# Do not remove: This fixes the getrandom deployment in wasm canisters
ic-crypto-getrandom-for-wasm = { path = "../ic-crypto-getrandom-for-wasm" }

# dependencies for `state-machine-test` feature
flate2 = { workspace = true, optional = true }
ic-test-state-machine-client = { workspace = true, optional = true }
log = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = [
  "blocking",
  "gzip",
  "json",
  "rustls-tls",
  "trust-dns",
] }
