# A crate with all of the ic exports that is used in other dependencies 
# needed to simplify the process of upgrading ic deps in other projects

[package]
name = "ic-exports"
version.workspace = true
edition.workspace = true

[features]
default = []
ledger = ["ic-ledger-types"]
icrc = ["icrc-ledger-types"]
pocket-ic-tests = ["flate2", "pocket-ic", "log", "once_cell", "reqwest"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
serde = { workspace = true }
pocket-ic = { workspace = true, optional = true }


ic-ledger-types = { workspace = true, optional = true }

# Using our icrc-ledger-types fork until the one published on crates.io is updated
# with the latest version of candid
icrc-ledger-types = { path = "../icrc-ledger-types", optional = true }
# icrc-ledger-types = { workspace = true, optional = true }

ic-kit = { path = "../ic-kit" }

# Do not remove: This fixes the getrandom deployment in wasm canisters
ic-crypto-getrandom-for-wasm = { path = "../ic-crypto-getrandom-for-wasm" }

# dependencies for `pocket-ic-tests` feature
flate2 = { workspace = true, optional = true }
log = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = [
  "blocking",
  "gzip",
  "json",
  "rustls-tls",
  "trust-dns",
] }