# A crate with all of the ic exports that is used in other dependencies 
# needed to simplify the process of upgrading ic deps in other projects

[package]
name = "ic-exports"
version.workspace = true
edition.workspace = true

[features]
default = []
ledger = ["ic-ledger-types"]
icrc = ["icrc-ledger-types"]
pocket-ic-tests = ["flate2", "pocket-ic", "log", "once_cell", "reqwest"]
pocket-ic-tests-async = ["pocket-ic-tests", "tokio"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
# Do not remove: This fixes the getrandom deployment in wasm canisters
ic-crypto-getrandom-for-wasm = { path = "../ic-crypto-getrandom-for-wasm" }
ic-kit = { path = "../ic-kit" }
ic-ledger-types = { workspace = true, optional = true }
icrc-ledger-types = { workspace = true, optional = true }
pocket-ic = { workspace = true, optional = true }
serde = { workspace = true }

# dependencies for `pocket-ic-tests` feature
flate2 = { workspace = true, optional = true }
log = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = [
  "blocking",
  "gzip",
  "json",
  "rustls-tls",
  "trust-dns",
] }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }