[package]
edition = "2021"
name = "ic-factory"
version = "0.3.7"

[features]
default = []
agent = ["ic-agent", "garcon"]
no_api = []

[dependencies]
ledger-canister = {git = "https://github.com/dfinity/ic", branch = "rc--2022-09-11_18-31"}
ic-base-types = {git = "https://github.com/dfinity/ic", branch = "rc--2022-09-11_18-31"}
cycles-minting-canister = { git="https://github.com/dfinity/ic",branch="rc--2022-09-11_18-31"}
ic-ic00-types = {git = "https://github.com/dfinity/ic", branch = "rc--2022-09-11_18-31"}
hex = "0.4"
ic-cdk = "0.5"
candid = "0.7"
ic-kit = { git = "https://github.com/infinity-swap/ic-kit", tag = "v0.4.6" }
serde = "1.0"
serde_json = "1.0"
sha2 = "0.9"
serde_bytes = "0.11.2"
serde_cbor = "0.11.2"
thiserror = "1.0"
ic-canister = { path = "../ic-canister/ic-canister", package = "ic-canister" }
ic-canister-macros = { path = "../ic-canister/ic-canister-macros", package = "ic-canister-macros" }
ic-storage = { path = "../ic-storage", package = "ic-storage" }
ic-helpers = { path = "../ic-helpers", package = "ic-helpers" }
leb128 = "0.2.5"
ic-agent = { version = "0.20", optional = true }
garcon = { version = "0.2", optional = true}
libsecp256k1 = { version = "0.7", optional = false}
k256 = { version = "0.11" }
binread = "2.2"

# This dependency is not used direcly, but we must enable `custom` feature for it to compile for wasm32 target.
[target.'cfg(target = "wasm32-unknown-unknown")'.dependencies]
getrandom = { version = "0.2.6", features = ["custom"]}

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }