[package]
edition = "2021"
name = "ic-factory"
version = "0.3.8"

[features]
default = []
export-api = []

[dependencies]
candid = "0.8"
hex = "0.4"
sha2 = "0.9"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

ic-exports = { path = "../ic-exports" }
ic-canister = { path = "../ic-canister/ic-canister" }
ic-canister-macros = { path = "../ic-canister/ic-canister-macros" }
ic-storage = { path = "../ic-storage" }
ic-helpers = { path = "../ic-helpers" }
ic-stable-structures = { path = "../ic-stable-structures" }

# This dependency is not used direcly, but we must enable `custom` feature for it to compile for wasm32 target.
[target.'cfg(target = "wasm32-unknown-unknown")'.dependencies]
getrandom = { version = "0.2.6", features = ["custom"]}

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
