[package]
name = "ic-helpers"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
auto_ops = { workspace = true }
candid = { workspace = true }
crypto-bigint = { workspace = true }
ic-canister = { path = "../ic-canister/ic-canister" }
ic-exports = { path = "../ic-exports" }
k256 = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }

[features]
default = []
ledger = ["ic-exports/ledger"]
management_canister = []