[package]
name = "ic-kit"
version.workspace = true
edition.workspace = true
categories = ["api-bindings", "data-structures", "development-tools::testing"]
keywords = ["internet-computer", "canister", "cdk", "fleek"]
include = ["src", "Cargo.toml", "README.md"]

[dependencies]
candid = { workspace = true }
futures = { workspace = true, default-features = false, features = ["executor"] }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
