[package]
name = "ic-log"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
candid = { workspace = true }
cfg-if = { workspace = true, optional = true }
env_filter = { workspace = true }
humantime = { workspace = true }
ic-canister = { path = "../ic-canister/ic-canister", optional = true }
ic-stable-structures = { path = "../ic-stable-structures", optional = true }
ic-storage = { path = "../ic-storage", optional = true }
ic-exports = { path = "../ic-exports" }
log = { workspace = true }
ringbuffer = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
ic-canister = { path = "../ic-canister/ic-canister" }

[features]
canister = ["export-api", "ic-canister", "ic-storage", "ic-stable-structures", "cfg-if"]
export-api = []

[[example]]
name = "log_canister"
path = "examples/log_canister.rs"
required-features = ["canister"]

[[test]]
name = "in_memory_logger"
required-features = ["canister"]