[package]
name = "ic-metrics"
version.workspace = true
edition.workspace = true

[features]
default = []
export-api = []

[dependencies]
serde = { workspace = true }
candid = { workspace = true }

ic-exports = { path = "../ic-exports" }
ic-canister = { path = "../ic-canister/ic-canister" }
ic-storage = { path = "../ic-storage" }
