[package]
name = "ic-payments"
version.workspace = true
edition.workspace = true

[features]
state-machine = ["ic-exports/ic-test-state-machine"]

[dependencies]
ic-exports = { path = "../ic-exports", features = ["ledger"] }
ic-canister = { path = "../ic-canister/ic-canister" }
sha2 = { workspace = true }
ic-storage = { path = "../ic-storage" }
ic-stable-structures = { path = "../ic-stable-structures/" }
serde = { workspace = true }
candid = { workspace = true }
thiserror = { workspace = true }
async-recursion = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
