[package]
name = "ic-payments"
version.workspace = true
edition.workspace = true

[dependencies]
ic-exports = { path = "../ic-exports", features = ["icrc"] }
ic-canister = { path = "../ic-canister/ic-canister" }
sha2 = { workspace = true }
ic-storage = { path = "../ic-storage" }
ic-stable-structures = { path = "../ic-stable-structures/" }
serde = { workspace = true }
candid = { workspace = true }
thiserror = { workspace = true }
async-recursion = { workspace = true }

[dev-dependencies]
ic-exports = { path = "../ic-exports", features = ["ic-test-state-machine"] }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
