[package]
name = "ic-payments"
version.workspace = true
edition.workspace = true

[dependencies]
async-recursion = { workspace = true }
candid = { workspace = true }
ic-canister = { path = "../ic-canister/ic-canister" }
ic-exports = { path = "../ic-exports", features = ["icrc"] }
ic-stable-structures = { path = "../ic-stable-structures/" }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
ic-exports = { path = "../ic-exports", features = ["pocket-ic-tests"] }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
