[package]
name = "ic-stable-structures"
version.workspace = true
edition.workspace = true

[dependencies]
dfinity-stable-structures = { workspace = true }
ic-cdk = { workspace = true }
memmap2 = { workspace = true, optional = true }
parking_lot = { workspace = true }
schnellru = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
criterion = { workspace = true }
did = { path = "./tests/did" }
ic-cdk-macros = { workspace = true }
ic-exports = { path = "../ic-exports" }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "stable_storage_benchmark"
harness = false

[features]
# Enables the integration tests based on pocket-ic
pocket-ic = []
memory-mapped-files-memory = ["memmap2"]
