[package]
name = "ic-stable-structures"
version.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
dfinity-stable-structures = { workspace = true }
memmap2 = { workspace = true, optional = true }
parking_lot = { workspace = true }
schnellru = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
criterion = { workspace = true }
did = { path = "./tests/did" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-exports = { path = "../ic-exports" }
once_cell = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[[bench]]
name = "stable_storage_benchmark"
harness = false

[features]
# Enables the integration tests based on pocket-ic
pocket-ic = []
memory-mapped-files-memory = ["memmap2"]

[target.'cfg(target_family = "wasm")'.dependencies]
ic-exports = { path = "../ic-exports" }