[package]
name = "ic-storage"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-storage-derive = {path = "ic-storage-derive"}
thiserror = "1.0"
ic-cdk = "0.5"
candid = "0.7"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
ic-canister = {path = "../ic-canister/ic-canister"}