[package]
name = "ic-storage"
version = "0.2.1"
edition = "2021"

[dependencies]
candid = "0.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

ic-storage-derive = {path = "ic-storage-derive"}
ic-exports = { path = "../ic-exports" }

[dev-dependencies]
ic-canister = {path = "../ic-canister/ic-canister"}