[package]
name = "ic-task-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
ic-stable-structures = { path = "../ic-stable-structures" }
ic-kit = { path = "../ic-kit" }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
ic-exports = { path = "../ic-exports", features = ["pocket-ic-tests-async"] }
once_cell = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["full"] }
pocket-ic = { workspace = true }
