[package]
name = "ic-task-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
ic-kit = { path = "../ic-kit" }
ic-stable-structures = { path = "../ic-stable-structures" }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
