[package]
name = "ic-task-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
bincode = { workspace = true }
candid = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-kit = { path = "../ic-kit" }
ic-stable-structures = { path = "../ic-stable-structures" }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
ic-canister-client = { path = "../ic-canister-client", features = ["pocket-ic-client"]}
ic-exports = { path = "../ic-exports", features = ["pocket-ic-tests"] }
rand = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "time"] }
