[package]
name = "ic-test-utils"
version.workspace = true
edition.workspace = true

[dependencies]
dirs = { workspace = true }
garcon = { workspace = true }
ic-agent = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
thiserror = { workspace = true }
candid = { workspace = true }
