[package]
name = "ic-canister-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
serde_tokenstream = { workspace = true }

[package.metadata.cargo-udeps.ignore]
ic-exports = { path = "../../ic-exports" }