[package]
name = "ic-canister-macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
lazy_static = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_tokenstream = { workspace = true }
syn = { workspace = true, features = ["extra-traits"] }

[dev-dependencies]
trybuild = { workspace = true }

[package.metadata.cargo-udeps.ignore]
ic-exports = { path = "../../ic-exports" }
