[package]
name = "ic-canister"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-cdk = { git = "https://github.com/aewc/cdk-rs" }
ic-canister-macros = { path = "../ic-canister-macros" }
ic-storage = { path = "../../ic-storage" }
candid = "0.7.4"

[dev-dependencies]
serde = "1.0"
tokio-test = "0.4"
