[package]
name = "ic-canister"
version = "0.2.2"
edition = "2021"

[dependencies]
ic-cdk = "0.5"
candid = "0.7"
ic-canister-macros = { path = "../ic-canister-macros" }
ic-storage = { path = "../../ic-storage" }
ic-kit = { git = "https://github.com/infinity-swap/ic-kit", tag = "v0.4.6" }

[dev-dependencies]
serde = "1.0"
tokio-test = "0.4"
