[package]
name = "ic-http-outcall-proxy-client"
version.workspace = true
edition.workspace = true

[dependencies]
ic-http-outcall-api = { path = "../api", features = ["proxy-api"] }
ic-http-outcall-proxy-canister = { path = "../proxy-canister" }
ic-exports = { path = "../../ic-exports" }
ic-canister-client = { path = "../../ic-canister-client", features = ["ic-agent-client"] }

tokio = { workspace = true, features = ["rt", "time", "macros"] }
anyhow = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
candid = { workspace = true }
ic-agent = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true, features = ["derive"] }
